--- a/demo100/src/main/resources/application.yml
+++ b/demo100/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
       enabled: false
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
     username: root
     password: 123456
